--- a/octoweb/styles/css/clay.css
+++ b/octoweb/styles/css/clay.css
@@ -1,8 +1,47 @@
+.boundary {
+	border: solid;
+	border-width: 1px;
+}
+
+.section {
+	height: 33%;
+}
+
+#menu {
+	height: 100%;
+	width: 200px;
+	float:left;
+	background-color: white;
+	border: solid;
+	border-color: green;
+}
+
+#workspace {
+	height: 100%;
+/* 
+	border: solid;
+	border-color: blue;
+ */
+	position:right;
+}
+
+#hardwareList {
+	border: solid;
+	border-color: red;
+}
 
 /* -------------------------- General Clay CSS  --------------------------*/
+html{
+	height: 100%; 
+	width: 100%; 
+	margin: 0;
+}
 
 body{
 	font-family: inconsolata;
+	height: 650px; 
+	width: 100%; 
+	margin: 0;
 }
 
 
