midi in, midi out, connections, and values updating using node server

--- a/octoWebExpress/views/index.ejs
+++ b/octoWebExpress/views/index.ejs
@@ -16,6 +16,7 @@
     <script src="javascripts/libraries/jquery.jsPlumb-1.6.2-min.js"></script>  
     <script src="javascripts/libraries/midi.js"></script>
     <script src="javascripts/libraries/emulatedHwEventHandlers.js"></script>  
+    <script src="/socket.io/socket.io.js"></script>
     <style>
 
     
