--- a/octoWebExpress/public/stylesheets/clay.css
+++ b/octoWebExpress/public/stylesheets/clay.css
@@ -457,6 +457,7 @@ svg{
 	top: 110px;
 	margin-left: 25px;
 }
+
 .outputWindow{ 	
     position: absolute;
 	text-align: center;
@@ -473,6 +474,16 @@ svg{
 	top: 95px;
 	left: 75px;
 }
+
+.fanIcon {
+	width: 75px; 	
+    position: absolute;
+	text-align: center;
+	top: 75px;
+	margin-left: 65px;
+	
+}
+
 
 .sensorLED {
     height: 50px;
