Added motor block, deleted .DS_store files

--- a/octoWebExpress/public/stylesheets/clay.css
+++ b/octoWebExpress/public/stylesheets/clay.css
@@ -475,13 +475,12 @@ svg{
 	left: 75px;
 }
 
-.fanIcon {
+.fanIcon, .motorIcon {
 	width: 75px; 	
     position: absolute;
 	text-align: center;
 	top: 75px;
-	margin-left: 65px;
-	
+	margin-left: 65px;	
 }
 
 
