fixed bugs in adding and removing blocks from sidebar ; fixed drawing position codeblocks to always be on screen

--- a/octoWebExpress/views/index.ejs
+++ b/octoWebExpress/views/index.ejs
@@ -53,9 +53,9 @@
 		<li class="sibebarbtn"  id="hwEmuBtn{{this.name}}" > <i class="fa fa-plus-circle fa-lg"></i> {{this.name}}</li>
 	</script>
 	<script type="text/x-handlebars-template" id="emulated-hardware-created-template">
-		<li class="sibebarbtn" id="hwEmuCreated{{this.id}}"> 
-			<i class="fa fa-square fa-lg white shadow"></i> {{this.name}} 
-			<div class="sidebarRemoveBtn" >
+		<li class="sibebarbtn"> 
+			<i  class="fa fa-plug fa-lg"></i> {{this.name}} 
+			<div id="hwEmuCreated{{this.id}}" class="sidebarRemoveBtn" >
 				<i class="fa fa-times-circle fa-lg"></i>
 			</div>
 		</li>
