--- a/octoWebExpress/views/index.ejs
+++ b/octoWebExpress/views/index.ejs
@@ -72,8 +72,8 @@
 	<script src="javascripts/libraries/handlebarsTemplates.js"></script>
 	
 	
-    <script src="javascripts/app.js"></script>
+    <script src="javascripts/jsplumbSetup.js"></script>
     <script src="javascripts/drawer.js"></script>
-    <script src="javascripts/midi-clay.js"></script>
+    <script src="javascripts/clientApp.js"></script>
 </body>
 </html>
