fixed motion sensor css to change on hover

--- a/octoWebExpress/public/stylesheets/clay.css
+++ b/octoWebExpress/public/stylesheets/clay.css
@@ -408,7 +408,9 @@ div.editable.freeCell:hover{
 	opacity: 0.1;
 	background-color: yellow;
 }
-
+.motion:hover{
+	opacity: 1.0;
+}
 
 .heater{
     height: 50px;
