--- a/octoWebExpress/public/stylesheets/clay.css
+++ b/octoWebExpress/public/stylesheets/clay.css
@@ -424,6 +424,63 @@ div.editable.freeCell:hover{
 	background-color: red;
 }
 
+/* for sound wave animation */
+
+div.preloader_1{
+    position:absolute;
+    height:5px;
+    top: 140px;
+	left: 75px;
+}
+.preloader_1 span{
+    display:block;
+    bottom:0px;
+    width: 9px;
+    height: 10px;
+    background:#9b59b6;
+    position:absolute;
+    -webkit-animation: sound 1.5s infinite ease-in-out;
+    animation-name: sound;
+    animation-duration: 1.5;
+    animation-iteration-count: infinite;
+    animation-timing-function: ease-in-out;
+}
+ 
+.preloader_1 span:nth-child(2){
+left:11px;
+-webkit-animation-delay: .2s;
+animation-delay: .2s;
+}
+.preloader_1 span:nth-child(3){
+left:22px;
+-webkit-animation-delay: .4s;
+animation-delay: .4s;
+}
+.preloader_1 span:nth-child(4){
+left:33px;
+-webkit-animation-delay: .6s;
+animation-delay: .6s;
+}
+.preloader_1 span:nth-child(5){
+left:44px;
+-webkit-animation-delay: .8s;
+animation-delay: .8s;
+}
+
+@-webkit-keyframes sound {
+    0% {height:5px;transform:translateY(0px);background:#9b59b6;}
+    25% {height:100%;transform:translateY(0px);background:#3498db;}
+    50% {height:5px;transform:translateY(0px);background:#9b59b6;}
+    100% {height:5px;transform:translateY(0px);background:#9b59b6;}
+}
+
+@keyframes sound {
+    0% {height:5px;transform:translateY(0px);background:#9b59b6;}
+    25% {height:30px;transform:translateY(15px);background:#3498db;}
+    50% {height:5px;transform:translateY(0px);background:#9b59b6;}
+    100% {height:5px;transform:translateY(0px);background:#9b59b6;}
+}
+/* for sound wave animation - END */
 
 /* -------------------------- JQUERY HELPERS   --------------------------*/
 
