--- a/octoWebExpress/public/stylesheets/clay.css
+++ b/octoWebExpress/public/stylesheets/clay.css
@@ -437,7 +437,7 @@ div.preloader_1{
     bottom:0px;
     width: 9px;
     height: 10px;
-    background:#9b59b6;
+    background:#F0FFFF;
     position:absolute;
     -webkit-animation: sound 1.5s infinite ease-in-out;
     animation-name: sound;
@@ -468,10 +468,10 @@ animation-delay: .8s;
 }
 
 @-webkit-keyframes sound {
-    0% {height:5px;transform:translateY(0px);background:#9b59b6;}
-    25% {height:100%;transform:translateY(0px);background:#3498db;}
-    50% {height:5px;transform:translateY(0px);background:#9b59b6;}
-    100% {height:5px;transform:translateY(0px);background:#9b59b6;}
+    0% {height:5px;transform:translateY(0px);background:#F0FFFF;}
+    25% {height:100%;transform:translateY(0px);background:#000000;}
+    50% {height:5px;transform:translateY(0px);background:#F0FFFF;}
+    100% {height:5px;transform:translateY(0px);background:#F0FFFF;}
 }
 
 @keyframes sound {
