--- a/octoWebExpress/public/stylesheets/clay.css
+++ b/octoWebExpress/public/stylesheets/clay.css
@@ -475,10 +475,10 @@ animation-delay: .8s;
 }
 
 @keyframes sound {
-    0% {height:5px;transform:translateY(0px);background:#9b59b6;}
-    25% {height:30px;transform:translateY(15px);background:#3498db;}
-    50% {height:5px;transform:translateY(0px);background:#9b59b6;}
-    100% {height:5px;transform:translateY(0px);background:#9b59b6;}
+    0% {height:5px;transform:translateY(0px);background:#F0FFFF;}
+    25% {height:100%;transform:translateY(0px);background:#000000;}
+    50% {height:5px;transform:translateY(0px);background:#F0FFFF;}
+    100% {height:5px;transform:translateY(0px);background:#F0FFFF;}
 }
 /* for sound wave animation - END */
 
