*In USB config.h: added new hardware address for full tiny device test including : Force Sensor, Temperature Sensor, Heater , Vibration,  Fan, Tilt
octoweb :
* Node: Updated client and server app dictionarys of new virtual and physical hardware
* Alphabetized list of modues
* Added new template and code icon for add code blocks

* Added keynote documentation files for pin mappings of V2 hardware

--- a/octoWebExpress/public/stylesheets/clay.css
+++ b/octoWebExpress/public/stylesheets/clay.css
@@ -108,6 +108,13 @@ svg{
 	margin-bottom: 0px;
 }
 
+#hwEmuBtnCode {
+	padding-top: 10px;
+	padding-bottom: 10px;
+	border:	1px dashed lightGrey; 
+
+}
+
 #emulatedList,#emulationOptionsList{
 	font-size: 13px;
 	font-weight: bold; 
