--- a/octoWebExpress/views/index.ejs
+++ b/octoWebExpress/views/index.ejs
@@ -52,6 +52,9 @@
 	<script type="text/x-handlebars-template" id="emulated-hardware-button-template">
 		<li class="sibebarbtn"  id="hwEmuBtn{{this.name}}" > <i class="fa fa-plus-circle fa-lg"></i> {{this.name}}</li>
 	</script>
+	<script type="text/x-handlebars-template" id="code-button-template">
+		<li class="sibebarbtn"  id="hwEmuBtn{{this.name}}" >  <i class="fa fa-plus-circle fa-lg"></i> <i class="fa fa-terminal fa-lg"></i> {{this.name}} </li>
+	</script>
 	<script type="text/x-handlebars-template" id="emulated-hardware-created-template">
 		<li class="sibebarbtn"> 
 			<i  class="fa fa-plug fa-lg"></i> {{this.name}} 
